--- a/markup/_layouts/_content/contests-content.jade
+++ b/markup/_layouts/_content/contests-content.jade
@@ -1,5 +1,5 @@
 section.nl-section.nl-players.nl-contests
-    div.container
+    div.container.container-wider
         div.row.align-items-center
             div.heading-search
                 h1.heading-search__header contests
@@ -10,7 +10,7 @@ section.nl-section.nl-players.nl-contests
                             button.btn.btn-secondary(type="button") <i class="fa fa-search" aria-hidden="true"></i>
 
         div.row
-            div.col-lg-8
+            div.col.md-12.col-lg-8
                 div.nl-players-table.nl-contests-table
 
 
