Fix charity button

--- a/markup/_scss/base/_base.scss
+++ b/markup/_scss/base/_base.scss
@@ -213,3 +213,14 @@ main{
   }
 }
 
+/* btn-charity
+---------------------------------------- */
+.btn-charity {
+  min-width: 80px;
+  margin-top: -5px;
+
+  span {
+    font-size: 10px;
+    padding: 0.5rem;
+  }
+}
