--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -9291,6 +9291,15 @@ main {
     -ms-flex-item-align: end;
     align-self: flex-end; }
 
+/* btn-charity
+---------------------------------------- */
+.btn-charity {
+  min-width: 80px;
+  margin-top: -5px; }
+  .btn-charity span {
+    font-size: 10px;
+    padding: 0.5rem; }
+
 h1, h2, h3, h4, h5 {
   font-weight: 700;
   text-transform: uppercase;
