hide filtering when football is clicked

--- a/markup/_layouts/_content/players-content.jade
+++ b/markup/_layouts/_content/players-content.jade
@@ -3,7 +3,7 @@ section.nl-section.nl-players
         div.row
             div.col-md-12
                 h1 PLAYERS
-        div.row
+        div.row.sports-filtering
             div.col-md-12.col-lg-8
                 div.nl-players-filter-title Filter by league:
                 div.nl-players-filter
