--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -3,7 +3,7 @@ section.nl-section.nl-players.nl-create-team
         div.row
             div.col-md-12
                 h1 CREATE TEAM
-        div.row
+        div.row.sports-filtering
             div.col-md-12.col-lg-8
                 div.nl-players-filter-title Filter by league:
                 div.nl-players-filter
