setup football variant of create team

--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -4,119 +4,13 @@ section.nl-section.nl-players.nl-create-team
             div.col-md-12
                 h1 CREATE TEAM
         div.row
-            div.col-md-12.col-lg-7
-                div.nl-players-filter-title Filter by lEAgue:
-                div.nl-players-filter
-                    div.row.align-items-center
-                        div.col-md-12
-                            div.owl-carousel.pl-flag
-                                div
-                                    button.btn.btn-link(type="button")
-                                        img(src="assets/img/flag/USA.png" alt="USA")
-                                div
-                                    button.btn.btn-link(type="button")
-                                        img(src="assets/img/flag/Spain.png" alt="Spain")
-                                div
-                                    button.btn.btn-link(type="button")
-                                        img(src="assets/img/flag/Germany.png" alt="Germany")
-                                div
-                                    button.btn.btn-link(type="button")
-                                        img(src="assets/img/flag/France.png" alt="France")
-                        //div.col-md-7
-                        //    button.btn.btn-primary(type="clear") Reset Filter
-                div.nl-players-filter-title FILTER by team:
-                div.nl-players-filter-caruseul
-                    div.owl-carousel.pl-teams
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-
-
-
-        div.row.nl-no-wrap
             div.col-md-12.col-lg-8.nl-team-m600
                 div.nl-players-table.nl-create-team-table
                     div.nl-players-table-data-field
-                        div.nl-data--avatar
+                        div.nl-data--avatar.hidden-sm-down
                             <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
 
-                        div.nl-data--text.nl-m-r-80
+                        div.nl-data--text.nl-m-r-80.hidden-sm-down
                             p.title Cristiano Ronaldo
                             p team : Real Madrid
                             p position: A
@@ -161,8 +55,6 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p Sebastian Giovinco
                                                             p.nl-position FLEX
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
 
                                                             p 28.33
@@ -176,6 +68,8 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
+                                                            p
+                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -219,8 +113,6 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p Sebastian Giovinco
                                                             p.nl-position K
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p 28.33
                                                             p $12,500
@@ -230,6 +122,8 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
+                                                            p
+                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -272,8 +166,6 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p Sebastian Giovinco
                                                             p.nl-position LRB
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p 28.33
                                                             p $12,500
@@ -283,6 +175,8 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
+                                                            p
+                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -325,8 +219,6 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p Sebastian Giovinco
                                                             p.nl-position RRB
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p 28.33
                                                             p $12,500
@@ -336,6 +228,8 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
+                                                            p
+                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -378,8 +272,6 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p Sebastian Giovinco
                                                             p.nl-position QB
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p 28.33
                                                             p $12,500
@@ -389,6 +281,8 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
+                                                            p
+                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -431,8 +325,6 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p Sebastian Giovinco
                                                             p.nl-position LWR
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p 28.33
                                                             p $12,500
@@ -442,6 +334,8 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
+                                                            p
+                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -484,8 +378,6 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p Sebastian Giovinco
                                                             p.nl-position RWR
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p 28.33
                                                             p $12,500
@@ -495,6 +387,8 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
+                                                            p
+                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -537,8 +431,6 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p Sebastian Giovinco
                                                             p.nl-position TE
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p 28.33
                                                             p $12,500
@@ -548,6 +440,8 @@ section.nl-section.nl-players.nl-create-team
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
+                                                            p
+                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -790,7 +684,7 @@ section.nl-section.nl-players.nl-create-team
                             .col-12
                                 div.nl-team-card.table-data-field
                                     h3 team NLC2
-                                    <img src="assets/img/helmet.png" alt="helmet">
+                                    <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
 
                         .row
                             .col-12
