--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -52,10 +52,10 @@ header.nl-header-log
                                 li.nav-item
                                     a.nav-link
                                 li.nav-item.dropdown
-                                    a.nav-link.dropdown-toggle(href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") <span>Sport</span> <img src="assets/img/ball.png" alt="#">
+                                    a.nav-link.dropdown-toggle(href="" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") <span>Sport</span> <img src="assets/img/ball.png" alt="#">
                                     div.sports-selector.dropdown-menu(aria-labelledby="dropdownMenuLink")
-                                        a.sport-link.dropdown-item(href="#" data-sports="soccer") <span>Soccer</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img">
-                                        a.sport-link.dropdown-item(href="#" data-sports="football") <span>Football</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img">
+                                        a.sport-link.dropdown-item(href="create_team.html" data-sports="soccer") <span>Soccer</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img">
+                                        a.sport-link.dropdown-item(href="create_team_football.html" data-sports="football") <span>Football</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img">
                                         a.sport-link.dropdown-item(href="#" data-sports="baseball") <span>Baseball</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img">
                                         a.sport-link.dropdown-item(href="#" data-sports="tennis") <span>Tennis</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img">
 
