--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -985,7 +985,7 @@ section.nl-section.nl-players.nl-create-team
                                     h3 team NLC2
                         .row
                             .col-12
-                                table.table.table-striped
+                                table.table.table-striped.nl-team-list-table
                                     thead
                                         tr
 
