--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -688,7 +688,7 @@ section.nl-section.nl-players.nl-create-team
 
                         .row
                             .col-12
-                                table.table.table-striped
+                                table.table.table-striped.nl-team-list-table
                                     thead
                                         tr
 
