--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -355,3 +355,27 @@
 .nl-players-filter {
   margin: 0 0 calculateRem(20px);
 }
+
+/* Table create team - toggle view
+---------------------------------------- */
+.nl-my-teams .nl-team-list-table {
+
+  th, td{
+    &:nth-child(1){
+      width: 40%;
+      padding-left: 1.5rem;
+    }
+    &:nth-child(2){
+      width: 12%;
+    }
+    &:nth-child(3){
+      width: 12%;
+    }
+    &:nth-child(4){
+      width: 12%;
+    }
+    &:nth-child(5){
+      width: 20%;
+    }
+  }
+}
