--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -63,13 +63,16 @@
 @import "sections/about";
 
 @import "sections/change-password";
+
 @import "sections/nl-contests";
+@import "sections/nl-enter-contests";
 
 @import "sections/contact";
 @import "sections/edit_profile";
 @import "sections/faq";
 @import "sections/_my_balances";
 @import "sections/_terms-conditions";
+
 
 @import "elements/nl-theme-selector";
 
